workflow/firecrawl_self_host/cluster-install/ingress.yml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: firecrawl-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: <cluster-domain>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api   # must match your service name
                port:
                  number: 3002  # must match your targetPort
